# BaseGraph

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  add_modules.py  bg  bgext  extension_utils.py  extensions.yml  pybind_wrapper.cpp  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: compare_networkx.yml  cpp_unit_tests.yml  python_build.yml  run_tests.yml
basegraph/: __init__.py
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.py  plot_benchmarks.py
benchmarks/assets/: undirected_graph.txt
cmake/: BaseGraphConfig.cmake.in  packageutils.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  extensions.rst  index.rst  installation.rst  readme.rst  typedefs.rst
docs/_static/: custom.css
docs/classes/: directed_multigraph.rst  directedgraph.rst  edgelabeled_directedgraph.rst  edgelabeled_undirectedgraph.rst  graph_types.rst  undirected_multigraph.rst  undirectedgraph.rst
docs/directed_graphs/: directed_graph.rst  directed_labeled_graph.rst  directed_multigraph.rst  directed_weighted_graph.rst  index.rst
docs/metrics/: directedmetrics.rst  generalmetrics.rst  metrics.rst  undirectedmetrics.rst
docs/undirected_graphs/: index.rst  undirected_graph.rst  undirected_labeled_graph.rst  undirected_multigraph.rst  undirected_weighted_graph.rst
example/: CMakeLists.txt  README.md  directed_graph.cpp  edgelabeled_directedgraph.cpp  edgelabeled_undirectedgraph.cpp  main.cpp  undirected_graph.cpp  vertex_labeled.cpp
examples/: CMakeLists.txt  README.md  directed_graph.cpp  edgelabeled_directedgraph.cpp  edgelabeled_undirectedgraph.cpp  undirected_graph.cpp
include/BaseGraph/: boost_hash.hpp  directed_graph.hpp  directed_multigraph.h  directed_multigraph.hpp  directed_weighted_graph.hpp  directedgraph.h  edgelabeled_directedgraph.hpp  edgelabeled_undirectedgraph.hpp  fileio.h  fileio.hpp  types.h  undirected_graph.hpp  undirected_multigraph.h  undirected_multigraph.hpp  undirected_weighted_graph.hpp  undirectedgraph.h  util.hpp  vertexlabeled_directedgraph.hpp  vertexlabeled_graph.hpp  vertexlabeled_undirectedgraph.hpp
include/BaseGraph/algorithms/: graphpaths.h  graphpaths.hpp  layeredconfigurationmodel.h  paths.hpp  percolation.h  randomgraphs.h  topology.hpp
include/BaseGraph/extensions/: CMakeLists.txt
include/BaseGraph/extensions/metrics/: CMakeLists.txt  bind_metrics.cpp  directed.cpp  directed.h  general.cpp  undirected.cpp  undirected.h
include/BaseGraph/extensions/metrics/test_metrics/: test_directed.cpp  test_undirected.cpp
include/BaseGraph/extensions/other-metrics/: CMakeLists.txt  undirected.cpp  undirected.h
include/BaseGraph/extensions/random/: CMakeLists.txt  bind_random.cpp  randomgraphs.cpp  randomgraphs.h  rng.h
include/BaseGraph/extensions/random/test_random/: randomgraphs.cpp
include/BaseGraph/metrics/: directed.h  general.h  undirected.h
include/BaseGraph/random/: percolation.h  randomgraphs.h
include/pgl/: directedgraph.h  fileio.h  undirectedgraph.h  vertexlabeled_directedgraph.hpp  vertexlabeled_undirectedgraph.hpp
include/pgl/algorithms/: graphpaths.h  percolation.h  randomgraphs.h
include/pgl/inputoutput/: inputoutput.h
include/pgl/metrics/: directed.h  general.h  undirected.h
pybind_wrapper/: edgelabeled_graphs.hpp  graphs.cpp  io.cpp  labeled_graphs.hpp  metrics.cpp  pybind_main.cpp  random.cpp  vertexlabeled_graphs.hpp
python/: CMakeLists.txt  algorithms.cpp  common_graph_methods.hpp  edgelabeled_graphs.hpp  graphs.cpp  io.cpp  pybind_main.cpp
src/: CMakeLists.txt  directed_multigraph.cpp  directedgraph.cpp  fileio.cpp  undirected_multigraph.cpp  undirectedgraph.cpp
src/algorithms/: graphpaths.cpp  layeredconfigurationmodel.cpp  percolation.cpp  randomgraphs.cpp
src/inputoutput/: inputoutput.cpp
src/metrics/: directed.cpp  general.cpp  undirected.cpp
src/random/: percolation.cpp  randomgraphs.cpp  rng.cpp
tests/: CMakeLists.txt  directedgraph.cpp  fixtures.hpp  graph_fileIO.cpp  graph_metrics.cpp  networkx_additional_metrics.py  randomgraphs.cpp  test_directed_labeled_graph.cpp  test_directed_multigraph.cpp  test_directed_weighted_graph.cpp  test_directedgraph.cpp  test_edgelabeled_directedgraph.cpp  test_edgelabeled_undirectedgraph.cpp  test_graph_fileIO.cpp  test_paths.cpp  test_topology.cpp  test_undirected_labeled_graph.cpp  test_undirected_multigraph.cpp  test_undirected_weighted_graph.cpp  test_undirectedgraph.cpp  test_with_networkx.py  undirectedgraph.cpp  vertexlabeled_directedgraph.cpp  vertexlabeled_undirectedgraph.cpp
tests/assets/: directed_graph.txt  small_directed_graph.txt  small_undirected_graph.txt  undirected_graph.txt
tests/test_core/: fixtures.hpp  graph_fileIO.cpp  test_directed_multigraph.cpp  test_directedgraph.cpp  test_edgelabeled_directedgraph.cpp  test_edgelabeled_undirectedgraph.cpp  test_undirected_multigraph.cpp  test_undirectedgraph.cpp  test_vertexlabeled_graphs.cpp
tests/test_metrics/: fixtures.hpp  test_directed.cpp  test_undirected.cpp
tests/test_random/: randomgraphs.cpp
tests/test_wrapper/: fixtures.py  networkx_additional_metrics.py  test_paths.py  test_with_networkx.py
tests/test_wrapper_with_networkx/: fixtures.py  networkx_additional_metrics.py  test_directed_metrics.py  test_general_metrics.py  test_paths.py  test_undirected_metrics.py
