SUBDIRLIST(EXTENSIONS ${CMAKE_CURRENT_SOURCE_DIR})

foreach(subdir ${EXTENSIONS})
    if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt")
        add_subdirectory(${subdir})
    endif()
endforeach()

set(BASEGRAPH_EXTENSIONS ${BASEGRAPH_EXTENSIONS} PARENT_SCOPE)
set(PYBIND_MODULES ${PYBIND_MODULES} PARENT_SCOPE)
